Added widgets for screens